Application finalized after overcoming lots of challenges like -adding update option in the Spring Boot Repository/controller -addition of the footer -finalizing welcome page -correct implementation of the http.put method in angular service -finalization of the test paper with only radio buttons -finalization of the test paper result

--- a/onlinetest_Angular/src/app/components/online-test-result/online-test-result.component.html
+++ b/onlinetest_Angular/src/app/components/online-test-result/online-test-result.component.html
@@ -1,1 +1,17 @@
-<p>online-test-result works!</p>
+<!-- <p>online-test-result works!</p> -->
+
+<div class="container">
+    <span style="align-content: center; justify-content: center;text-align: center;">
+        <div class="container">  
+        
+            <b>Total Questions Corrected</b>: {{count}} <br>
+            <b>Your Score in the Exam</b>: {{totalScore}}  <br>
+            <b>Maximum Score</b> : {{maxScore}}    <br>
+            <b>Your percent in the Exam</b>: {{percentInExam}}    
+        </div>
+    </span>
+</div>
+
+
+
+
