--- a/onlinetest_Angular/src/app/components/home/home.component.html
+++ b/onlinetest_Angular/src/app/components/home/home.component.html
@@ -1,1 +1,9 @@
-<p>home works!</p>
+<!-- <p>home works!</p> -->
+
+<div class="container">
+    <span style="align-content: center; justify-content: center;text-align: center;">
+        <div class="container">          
+            <h4>Welcome to the online test Application!</h4>   
+        </div>
+    </span>
+</div>
