--- a/onlinetest_Angular/src/app/components/test-paper-question/test-paper-question.component.html
+++ b/onlinetest_Angular/src/app/components/test-paper-question/test-paper-question.component.html
@@ -2,5 +2,261 @@
 
 <div *ngIf="testPaperQuestion">
     <!-- <a routerLink="./{{user.id}}">{{user.name}}</a> | <a routerLink="../">Home</a> -->
-    {{testPaperQuestion.QT1}}
+    
+    <form #userForm="ngForm" (ngSubmit)="submit(userForm)">    
+        <div class="col-md-18">            
+            <!-- {{testPaperQuestion|json}} -->                  
+            <h4>Question {{(testPaperQuestion.as_SERIAL_NO)}}</h4>
+            <div *ngIf="testPaperQuestion.qt1"><div [innerHTML]="testPaperQuestion.qt1"></div><br></div>                                                         
+            <!-- <div [innerHTML]="testPaperQuestion.i1"></div><br> -->
+            <div *ngIf="testPaperQuestion.i1!=null">
+                <img [src]="sanitizer.bypassSecurityTrustResourceUrl('data:image/jpeg;base64,' +testPaperQuestion.i1)"><br><br>
+            </div>
+            <div *ngIf="testPaperQuestion.qt2"><div [innerHTML]="testPaperQuestion.qt2"></div><br></div>                
+            <!-- <div [innerHTML]="testPaperQuestion.i2"></div><br> -->
+            <div *ngIf="testPaperQuestion.i2!=null">
+                <img [src]="sanitizer.bypassSecurityTrustResourceUrl('data:image/jpeg;base64,' +testPaperQuestion.i2)"><br><br>
+            </div>
+            <div *ngIf="testPaperQuestion.qt3"><div [innerHTML]="testPaperQuestion.qt3"></div><br></div>                
+            <!-- <div [innerHTML]="testPaperQuestion.i3"></div><br> -->
+            <div *ngIf="testPaperQuestion.i3!=null">
+                <img [src]="sanitizer.bypassSecurityTrustResourceUrl('data:image/jpeg;base64,' +testPaperQuestion.i3)"><br><br>
+            </div>
+            <div *ngIf="testPaperQuestion.qt4"><div [innerHTML]="testPaperQuestion.qt4"></div><br></div>                
+            <!-- <div [innerHTML]="testPaperQuestion.i4"></div><br> -->
+            <div *ngIf="testPaperQuestion.i4!=null">
+                <img [src]="sanitizer.bypassSecurityTrustResourceUrl('data:image/jpeg;base64,' +testPaperQuestion.i4)"><br><br>
+            </div>
+            <div *ngIf="testPaperQuestion.qt5"><div [innerHTML]="testPaperQuestion.qt5"></div><br></div>                
+            <!-- <div [innerHTML]="testPaperQuestion.i5"></div><br> -->
+            <div *ngIf="testPaperQuestion.i5!=null">
+                <img [src]="sanitizer.bypassSecurityTrustResourceUrl('data:image/jpeg;base64,' +testPaperQuestion.i5)"><br><br>
+            </div>
+            <div *ngIf="testPaperQuestion.qt6"><div [innerHTML]="testPaperQuestion.qt6"></div><br></div>                
+            <!-- <div [innerHTML]="testPaperQuestion.i6"></div><br> -->
+            <div *ngIf="testPaperQuestion.i6!=null">
+                <img [src]="sanitizer.bypassSecurityTrustResourceUrl('data:image/jpeg;base64,' +testPaperQuestion.i6)"><br><br>
+            </div>
+            <div *ngIf="testPaperQuestion.qt7"><div [innerHTML]="testPaperQuestion.qt7"></div><br></div>                
+            <!-- <div [innerHTML]="testPaperQuestion.i7"></div><br> -->
+            <div *ngIf="testPaperQuestion.i7!=null">
+                <img [src]="sanitizer.bypassSecurityTrustResourceUrl('data:image/jpeg;base64,' +testPaperQuestion.i7)"><br><br>
+            </div>
+            <div *ngIf="testPaperQuestion.qt8"><div [innerHTML]="testPaperQuestion.qt8"></div><br></div>                
+            <!-- <div [innerHTML]="testPaperQuestion.i8"></div><br> -->
+            <div *ngIf="testPaperQuestion.i8!=null">
+                <img [src]="sanitizer.bypassSecurityTrustResourceUrl('data:image/jpeg;base64,' +testPaperQuestion.i8)"><br><br>
+            </div>
+            <div *ngIf="testPaperQuestion.qt9"><div [innerHTML]="testPaperQuestion.qt9"></div><br></div>                
+            <!-- <div [innerHTML]="testPaperQuestion.i9"></div><br> -->
+            <div *ngIf="testPaperQuestion.i9!=null">
+                <img [src]="sanitizer.bypassSecurityTrustResourceUrl('data:image/jpeg;base64,' +testPaperQuestion.i9)"><br><br>
+            </div>
+            <div *ngIf="testPaperQuestion.qt10"><div [innerHTML]="testPaperQuestion.qt10"></div><br></div>                
+            <!-- <div [innerHTML]="testPaperQuestion.i10"></div><br> -->
+            <div *ngIf="testPaperQuestion.i10!=null">
+                <img [src]="sanitizer.bypassSecurityTrustResourceUrl('data:image/jpeg;base64,' +testPaperQuestion.i10)"><br><br>
+            </div>
+            
+                <div *ngIf="testPaperQuestion.a1 && testPaperQuestion.a2">
+                    <div class="form-group">     
+                    <div class="checkbox">
+                        <!-- <label for="{{'as'+(i+1)}}">                 -->
+                            <div *ngIf="testPaperQuestion.o1">
+                                <input [(ngModel)]="as1" [value]="testPaperQuestion.o1" 
+                                name="testPaperQuestion.as_SERIAL_NO" 
+                                type="checkbox" 
+                                (ngModelChange)="as1SelectionManage(userForm)"
+                                [attr.disabled]="as1SelectionAttribute"
+                                >{{testPaperQuestion.o1}} <br>
+                            </div>                                   
+                            <div *ngIf="testPaperQuestion.o2">
+                                <input [(ngModel)]="as2" [value]="testPaperQuestion.o2" 
+                                name="testPaperQuestion.as_SERIAL_NO" 
+                                type="checkbox" 
+                                (ngModelChange)="as2SelectionManage(userForm)"
+                                [attr.disabled]="as2SelectionAttribute"
+                                >{{testPaperQuestion.o2}} <br>
+                            </div>                                   
+                            <div *ngIf="testPaperQuestion.o3">
+                                <input [(ngModel)]="as3" [value]="testPaperQuestion.o3" 
+                                name="testPaperQuestion.as_SERIAL_NO" 
+                                type="checkbox" 
+                                (ngModelChange)="as3SelectionManage(userForm)"
+                                [attr.disabled]="as3SelectionAttribute"
+                                >{{testPaperQuestion.o3}} <br>
+                            </div>                                   
+                            <div *ngIf="testPaperQuestion.o4">
+                                <input [(ngModel)]="as4" [value]="testPaperQuestion.o4" 
+                                name="testPaperQuestion.as_SERIAL_NO" 
+                                type="checkbox" 
+                                (ngModelChange)="as4SelectionManage(userForm)"
+                                [attr.disabled]="as4SelectionAttribute"
+                                >{{testPaperQuestion.o4}} <br>
+                            </div>                                   
+                            <div *ngIf="testPaperQuestion.o5">
+                                <input [(ngModel)]="as5" [value]="testPaperQuestion.o5" 
+                                name="testPaperQuestion.as_SERIAL_NO" 
+                                type="checkbox" 
+                                (ngModelChange)="as5SelectionManage(userForm)"
+                                [attr.disabled]="as5SelectionAttribute"
+                                >{{testPaperQuestion.o5}} <br>
+                            </div>                                   
+                            <div *ngIf="testPaperQuestion.o6">
+                                <input [(ngModel)]="as6" [value]="testPaperQuestion.o6" 
+                                name="testPaperQuestion.as_SERIAL_NO" 
+                                type="checkbox" 
+                                (ngModelChange)="as6SelectionManage(userForm)"
+                                [attr.disabled]="as6SelectionAttribute"
+                                >{{testPaperQuestion.o6}} <br>
+                            </div>                                   
+                            <div *ngIf="testPaperQuestion.o7">
+                                <input [(ngModel)]="as7" [value]="testPaperQuestion.o7" 
+                                name="testPaperQuestion.as_SERIAL_NO" 
+                                type="checkbox" 
+                                (ngModelChange)="as7SelectionManage(userForm)"
+                                [attr.disabled]="as7SelectionAttribute"
+                                >{{testPaperQuestion.o7}} <br>
+                            </div>                                   
+                            <div *ngIf="testPaperQuestion.o8">
+                                <input [(ngModel)]="as8" [value]="testPaperQuestion.o8" 
+                                name="testPaperQuestion.as_SERIAL_NO" 
+                                type="checkbox" 
+                                (ngModelChange)="as8SelectionManage(userForm)"
+                                [attr.disabled]="as8SelectionAttribute"
+                                >{{testPaperQuestion.o8}} <br>
+                            </div>                                   
+                            <div *ngIf="testPaperQuestion.o9">
+                                <input [(ngModel)]="as9" [value]="testPaperQuestion.o9" 
+                                name="testPaperQuestion.as_SERIAL_NO" 
+                                type="checkbox" 
+                                (ngModelChange)="as9SelectionManage(userForm)"
+                                [attr.disabled]="as9SelectionAttribute"
+                                >{{testPaperQuestion.o9}} <br>
+                            </div>                                   
+                            <div *ngIf="testPaperQuestion.o10">
+                                <input [(ngModel)]="as10" [value]="testPaperQuestion.o10" 
+                                name="testPaperQuestion.as_SERIAL_NO" 
+                                type="checkbox"                                
+                                (ngModelChange)="as10SelectionManage(userForm)"
+                                [attr.disabled]="as10SelectionAttribute"
+                                >{{testPaperQuestion.o10}} <br>
+                            </div>                                   
+                        <!-- </label> -->
+                    </div> 
+                    </div>               
+                </div>
+                
+
+                <div *ngIf="!testPaperQuestion.a1 || !testPaperQuestion.a2">
+                    <div class="form-group">    
+                    <div class="radio">
+                        <!-- <label for="gender" *ngFor="let gender of genders"> -->
+                            <!-- <label for="{{'as'+1}}"> -->
+                            <div *ngIf="testPaperQuestion.o1">
+                                <input [(ngModel)]="as1" [value]="testPaperQuestion.o1" 
+                                name="testPaperQuestion.as_SERIAL_NO" 
+                                type="radio" 
+                                (ngModelChange)="as1SelectionManage(userForm)"
+                                [attr.disabled]="as1SelectionAttribute"                                
+                                >{{testPaperQuestion.o1}} <br>
+                            </div>                                   
+                            <div *ngIf="testPaperQuestion.o2">
+                                <input [(ngModel)]="as2" [value]="testPaperQuestion.o2" 
+                                name="testPaperQuestion.as_SERIAL_NO" 
+                                type="radio" 
+                                (ngModelChange)="as2SelectionManage(userForm)"
+                                [attr.disabled]="as2SelectionAttribute"
+                                >{{testPaperQuestion.o2}} <br>
+                            </div>                                   
+                            <div *ngIf="testPaperQuestion.o3">
+                                <input [(ngModel)]="as3" [value]="testPaperQuestion.o3" 
+                                name="testPaperQuestion.as_SERIAL_NO" 
+                                type="radio" 
+                                (ngModelChange)="as3SelectionManage(userForm)"
+                                [attr.disabled]="as3SelectionAttribute"
+                                >{{testPaperQuestion.o3}} <br>
+                            </div>                                   
+                            <div *ngIf="testPaperQuestion.o4">
+                                <input [(ngModel)]="as4" [value]="testPaperQuestion.o4" 
+                                name="testPaperQuestion.as_SERIAL_NO" 
+                                type="radio" 
+                                (ngModelChange)="as4SelectionManage(userForm)"
+                                [attr.disabled]="as4SelectionAttribute"
+                                >{{testPaperQuestion.o4}} <br>
+                            </div>                                   
+                            <div *ngIf="testPaperQuestion.o5">
+                                <input [(ngModel)]="as5" [value]="testPaperQuestion.o5" 
+                                name="testPaperQuestion.as_SERIAL_NO" 
+                                type="radio" 
+                                (ngModelChange)="as5SelectionManage(userForm)"
+                                [attr.disabled]="as5SelectionAttribute"
+                                >{{testPaperQuestion.o5}} <br>
+                            </div>                                   
+                            <div *ngIf="testPaperQuestion.o6">
+                                <input [(ngModel)]="as6" [value]="testPaperQuestion.o6" 
+                                name="testPaperQuestion.as_SERIAL_NO" 
+                                type="radio" 
+                                (ngModelChange)="as6SelectionManage(userForm)"
+                                [attr.disabled]="as6SelectionAttribute"
+                                >{{testPaperQuestion.o6}} <br>
+                            </div>                                   
+                            <div *ngIf="testPaperQuestion.o7">
+                                <input [(ngModel)]="as7" [value]="testPaperQuestion.o7" 
+                                name="testPaperQuestion.as_SERIAL_NO" 
+                                type="radio" 
+                                (ngModelChange)="as7SelectionManage(userForm)"
+                                [attr.disabled]="as7SelectionAttribute"
+                                >{{testPaperQuestion.o7}} <br>
+                            </div>                                   
+                            <div *ngIf="testPaperQuestion.o8">
+                                <input [(ngModel)]="as8" [value]="testPaperQuestion.o8" 
+                                name="testPaperQuestion.as_SERIAL_NO" 
+                                type="radio" 
+                                (ngModelChange)="as8SelectionManage(userForm)"
+                                [attr.disabled]="as8SelectionAttribute"
+                                >{{testPaperQuestion.o8}} <br>
+                            </div>                                   
+                            <div *ngIf="testPaperQuestion.o9">
+                                <input [(ngModel)]="as9" [value]="testPaperQuestion.o9" 
+                                name="testPaperQuestion.as_SERIAL_NO" 
+                                type="radio" 
+                                (ngModelChange)="as9SelectionManage(userForm)"
+                                [attr.disabled]="as9SelectionAttribute"
+                                >{{testPaperQuestion.o9}} <br>
+                            </div>                                   
+                            <div *ngIf="testPaperQuestion.o10">
+                                <input [(ngModel)]="as10" [value]="testPaperQuestion.o10" 
+                                name="testPaperQuestion.as_SERIAL_NO" 
+                                type="radio" 
+                                (ngModelChange)="as10SelectionManage(userForm) "
+                                [attr.disabled]="as10SelectionAttribute"
+                                >{{testPaperQuestion.o10}} <br>
+                            </div>                                   
+                            <!-- <input name="gender" [value]="gender" ngModel type="radio">{{gender}} <br> -->
+                        <!-- </label> -->
+                    </div>
+                    </div>
+                </div>
+
+        </div>        
+
+        <br>
+        <!-- <button class="btn btn-primary" type="submit">Submit</button>         -->
+        <!-- [disabled]="userForm.invalid" -->
+
+        <br>
+
+        <button *ngIf="isSubmitted && asSelectionCheck()" type="button" class="btn btn-success" disabled=true>Correct</button>
+        <button *ngIf="isSubmitted && !asSelectionCheck()" type="button" class="btn btn-danger" disabled=true>InCorrect</button>
+    </form>
+            
+    
+    
+
+        
+        
+        
+    
+    <br>
 </div>
